--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js",
+    "dev":"nodemon index.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run dev --prefix frontend"
+  },
+  "repository": {
+    "type": "git",
+    "url":"git+https://github.com/siddiquesk/MERNCHATAPP.git"
   },
   "keywords": [],
   "author": "",
